--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block stylesheets %}
     <link href="{{ asset('build/css/homepage.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
-    <link href="{{ asset('build/css/new.css?v=') ~ date().timestamp }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+    <link href="{{ asset('build/css/new.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
     <noscript><link rel="stylesheet" href="{{ asset('build/css/homepage.css') }}" ></noscript>
-    <noscript><link rel="stylesheet" href="{{ asset('build/css/new.css?v=') ~ date().timestamp }}" ></noscript>
+    <noscript><link rel="stylesheet" href="{{ asset('build/css/new.css') }}" ></noscript>
 {% endblock %}
 
 {% block structuredOpenGraph %}
@@ -34,6 +34,7 @@
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
+        "name": "Xây Dựng Kim Anh",
         "url": "https://xaydungkimanh.com/",
         "potentialAction": {
             "@type": "SearchAction",
