--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>{% block title %}{{ get_setting('pageTitle') }}{% endblock %}</title>
+        <meta name="description" content="{% block description %}{{ get_setting('pageDescription') }}{% endblock %}">
+        <meta name="keywords" content="{% block keyword %}{{ get_setting('pageKeyword') }}{% endblock %}">
+
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- dns prefetch -->
@@ -46,10 +50,6 @@
         <link rel="mask-icon" href="{{ asset('safari-pinned-tab.svg') }}" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-
-        <title>{% block title %}{{ get_setting('pageTitle') }}{% endblock %}</title>
-        <meta name="description" content="{% block description %}{{ get_setting('pageDescription') }}{% endblock %}">
-        <meta name="keywords" content="{% block keyword %}{{ get_setting('pageKeyword') }}{% endblock %}">
         
         {% block robots %}
         <meta name="robots" content="index, follow" />
@@ -107,9 +107,8 @@
 
         <!-- Custom css -->
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=vietnamese&display=swap" rel="stylesheet">
-        <style type="text/css">
-            {{ source('@web/css/app.css', ignore_missing = true) }}
-        </style>
+        <link href="{{ asset('build/css/app.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
+        <noscript><link rel="stylesheet" href="{{ asset('build/css/app.css') }}" ></noscript>
         {% block stylesheets %}
         {% endblock %}
     </head>
