--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -195,6 +195,12 @@
                     <li>
                         <a href="{{ path('news_category', {'level1': 'phong-thuy-xay-dung' }) }}" title="Phong thủy xây dựng">Phong thủy xây dựng</a>
                     </li>
+                    <li>
+                        <a href="{{ path('news_show', {'slug': 'chinh-sach-bao-mat-thong-tin' }) }}" title="Chính sách bảo mật thông tin">Chính sách bảo mật thông tin</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('news_show', {'slug': 'dieu-khoan-dich-vu' }) }}" title="Điều khoản dịch vụ">Điều khoản dịch vụ</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-3 col-lg-3">
