--- a/web/assets/scss/front/new.scss
+++ b/web/assets/scss/front/new.scss
@@ -28,6 +28,11 @@
                 }
             }
         }
+
+        .table-wrapper {
+            width: 100%;
+            overflow-x: auto;
+        }
     }
 }
 
