--- a/app/Resources/views/admin/news/new.html.twig
+++ b/app/Resources/views/admin/news/new.html.twig
@@ -36,6 +36,7 @@
                                         {{ form_row(form.pageTitle) }}
                                         {{ form_row(form.pageDescription) }}
                                         {{ form_row(form.pageKeyword) }}
+                                        {{ form_row(form.relatedNews) }}
 
                                         {{ form_row(form.contactHotline) }}
 
