--- a/app/Resources/views/amp/amp-theme/index.html.twig
+++ b/app/Resources/views/amp/amp-theme/index.html.twig
@@ -146,7 +146,7 @@
                 </div>
             </nav>
             {{ include('news/components/breadcrumbs.html.twig') }}
-            <article role="article" itemscope itemtype="http://schema.org/Article">
+            <article role="article">
                 {% set imagePath = (vich_uploader_asset(post, 'imageFile') ? vich_uploader_asset(post, 'imageFile') : absolute_url(asset('assets/images/no-image.png'))) %}
                 {% set imagePathFilter = (vich_uploader_asset(post, 'imageFile') ? vich_uploader_asset(post, 'imageFile') : absolute_url(asset('assets/images/no-image.png'))) | imagine_filter('news_share_800_420') %}
 
@@ -156,31 +156,8 @@
                     {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
                 {% endif %}
 
-                {# Begin google snippet #}
-                <meta itemscope itemprop="mainEntityOfPage" itemType="https://schema.org/WebPage" itemid="{{ absolute_url(path('news_show', {'slug': post.getUrl() })) }}"/>
-                <div itemprop="author" itemscope itemtype="https://schema.org/Person">
-                    <meta itemprop="name" content="{{ get_setting('siteName') }}"/>
-                    <meta itemprop="url" content="https://xaydungkimanh.business.site/"/>
-                </div>
-                <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-                    <meta itemprop="url" content="{{ imagePath != false ? absolute_url(imagePath) : absolute_url(imagePathFilter) }}">
-                    <meta itemprop="width" content="800">
-                    <meta itemprop="height" content="420">
-                </div>
-                <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-                    <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                        <meta itemprop="url" content="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}">
-                        <meta itemprop="width" content="274">
-                        <meta itemprop="height" content="99">
-                    </div>
-                    <meta itemprop="name" content="{{ get_setting('siteName') }}">
-                </div>
-                <meta itemprop="datePublished" content="{{ post.getCreatedAt()|date("Y-m-d h:m:s") ~ "+07:00" }}"/>
-                <meta itemprop="dateModified" content="{{ post.getUpdatedAt()|date("Y-m-d h:m:s") ~ "+07:00" }}"/>
-                {# End google snippet #}
-
-                <h1 itemprop="headline">{{ post.title }}</h1>
-                <div class="article-content" itemprop="articleBody">
+                <h1>{{ post.title }}</h1>
+                <div class="article-content">
                     {{ contentsAmp|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh', '088.609.4455':'0966.289.559'})|raw }}
                 </div>
 
