--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -46,10 +46,10 @@
                     </div>
 
                     {# List comments #}
-                    {{ include('news/comments/list.html.twig') }}
+                    {# {{ include('news/comments/list.html.twig') }} #}
                     
                     {# Render form comment #}
-                    {{ include('news/comments/form.html.twig') }}
+                    {# {{ include('news/comments/form.html.twig') }} #}
                 </article>
             </div>
         </div>
