--- a/app/Resources/views/news/show.html.twig
+++ b/app/Resources/views/news/show.html.twig
@@ -21,7 +21,6 @@
 {% endif %}
 
 {% block structuredOpenGraph %}
-    {# <link rel="amphtml" href="{{ url('amp_show', { slug: post.getUrl() }) }}"> #}
     <meta property="og:type" content="article" />
     <meta property="og:title" content="{{ post.getPageTitle() is not null ? post.getPageTitle() : post.getTitle() }}" />
     <meta property="og:description" content="{{ post.getPageDescription() is not null ? post.getPageDescription() : post.getDescription() }}" />
@@ -77,33 +76,10 @@
                 {# breadcrumbs #}
                 {{ include('news/components/breadcrumbs.html.twig') }}
 
-                <article id="post-{{ post.getId() }}" class="news" itemscope itemtype="http://schema.org/Article">
-                    {# Begin google snippet #}
-                    <meta itemscope itemprop="mainEntityOfPage" itemType="https://schema.org/WebPage" itemid="{{ absolute_url(path('news_show', {'slug': post.getUrl() })) }}"/>
-                    <div itemprop="author" itemscope itemtype="https://schema.org/Person">
-                        <meta itemprop="name" content="{{ get_setting('siteName') }}"/>
-                        <meta itemprop="url" content="https://xaydungkimanh.business.site/"/>
-                    </div>
-                    <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-                        <meta itemprop="url" content="{{ imagePath != false ? absolute_url(imagePath) : absolute_url(imagePathFilter) }}">
-                        <meta itemprop="width" content="800">
-                        <meta itemprop="height" content="420">
-                    </div>
-                    <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-                        <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                            <meta itemprop="url" content="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}">
-                            <meta itemprop="width" content="274">
-                            <meta itemprop="height" content="99">
-                        </div>
-                        <meta itemprop="name" content="{{ get_setting('siteName') }}">
-                    </div>
-                    <meta itemprop="datePublished" content="{{ post.getCreatedAt()|date("Y-m-d h:m:s") ~ "+07:00" }}"/>
-                    <meta itemprop="dateModified" content="{{ post.getUpdatedAt()|date("Y-m-d h:m:s") ~ "+07:00" }}"/>
-                    {# End google snippet #}
+                <article id="post-{{ post.getId() }}" class="news">
+                    <h1 class="entry-title block-title">{{ post.getTitle() }}</h1>
 
-                    <h1 class="entry-title block-title" itemprop="headline">{{ post.getTitle() }}</h1>
-
-                    <div class="news-container" itemprop="articleBody">
+                    <div class="news-container">
                         {{ contentsLazy|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh', '088.609.4455':'0966.289.559'})|raw }}
                     </div>
 
@@ -113,17 +89,16 @@
                     {# Rating and Share #}
                     <div class="rating-share-container">
                         {{ include('news/rating/rating.html.twig') }}
-                        {# {{ include('news/components/share.html.twig') }} #}
                     </div>
 
                     {# Related news #}
                     {{ include('news/components/related.html.twig') }}
                     
                     {# List comments #}
-                    {{ include('news/comments/list.html.twig') }}
+                    {# {{ include('news/comments/list.html.twig') }} #}
                     
                     {# Render form comment #}
-                    {{ include('news/comments/form.html.twig') }}
+                    {# {{ include('news/comments/form.html.twig') }} #}
                 </article>
             </div>
         </div>
