--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -114,7 +114,20 @@
         <!-- End Google Tag Manager -->
 
         <!-- Custom css -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=vietnamese&display=swap" rel="stylesheet">
+        <link
+            rel="preload"
+            href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=vietnamese&display=swap"
+            as="style"
+            onload="this.onload=null;this.rel='stylesheet'"
+        />
+        <noscript>
+            <link
+                href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=vietnamese&display=swap"
+                rel="stylesheet"
+                type="text/css"
+            />
+        </noscript>
+        <script src="https://kit.fontawesome.com/6cca6fc4c9.js" crossorigin="anonymous"></script>
         <link href="{{ asset('build/css/app.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
         <noscript><link rel="stylesheet" href="{{ asset('build/css/app.css') }}" ></noscript>
         {% block stylesheets %}
