--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -6,10 +6,10 @@
                 <div class="row">
                     {% for row in relatedNews %}
                         {% set imagePath = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) %}
-                        {% set imagePathFilter = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') %}
+                        {% set imagePathFilter = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_400') %}
                                                 
                         {% if convert_images.fileExists(imagePath) == false %}
-                            {% set imagePath = imagePath | imagine_filter('news_406_280') %}
+                            {% set imagePath = imagePath | imagine_filter('news_406_400') %}
                         {% else %}
                             {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
                         {% endif %}
@@ -55,7 +55,7 @@
         <div class="related-news">
             <h3>Khách hàng đánh giá về chúng tôi</h3>
             <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-3 col-md-3">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
                             <img
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-3 col-md-3">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
                             <img
@@ -83,7 +83,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <div class="related-wrapper video-related">
+                        <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/CsMoN-G_QK8?rel=0&showinfo=0&autoplay=1">
+                            <img
+                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                data-src="http://i3.ytimg.com/vi/CsMoN-G_QK8/hqdefault.jpg"
+                                width="277"
+                                height="208"
+                                async
+                                class="play-youtube-video lazyload"
+                                alt="Xây Nhà Quận Bình Tân - Uy Tín Làm Nên Thương Hiệu">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
                             <img
@@ -100,7 +114,7 @@
             </div>
 
             <br>
-            <h3>{{ 'news.news_related'|trans }}</h3>
+            <h3>Tham khảo bảng giá xây dựng khác</h3>
             <div class="row">
                 {% for row in relatedNews %}
                     <div class="col-xs-12 col-sm-4 col-md-3">
