--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -127,7 +127,7 @@
                 type="text/css"
             />
         </noscript>
-        <script src="https://kit.fontawesome.com/6cca6fc4c9.js" crossorigin="anonymous"></script>
+        <script defer fetchpriority="low" src="https://kit.fontawesome.com/6cca6fc4c9.js" crossorigin="anonymous"></script>
         <link href="{{ asset('build/css/app.css') }}" rel="preload stylesheet" as="style" onload="this.rel='stylesheet'" >
         <noscript><link rel="stylesheet" href="{{ asset('build/css/app.css') }}" ></noscript>
         {% block stylesheets %}
