--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -44,7 +44,7 @@
                     <div id="logo">								
                         <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
                             <img
-                                loading="eager"
+                                loading="lazy"
                                 class="lazyload"
                                 alt="{{ get_setting('siteName') }}"
                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
